added UI elements

--- a/index.html
+++ b/index.html
@@ -3,9 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
     <title>Employee Corner</title>
 </head>
 <body>
+    <div id="title-div">
+        <h1 id="title">Meet The Team</h1>
+    </div>
     
+    <div id="container">
+        <div id="employee-count">
+            <div class="row">
+                <div class="col-sm-2">
+                  <div class="c-callout c-callout-info">
+                    <small class="text-muted">Founders</small><br>
+                    <strong class="h4">2</strong>
+                  </div>
+                </div><!--/.col-->
+                <div class="col-sm-2">
+                  <div class="c-callout c-callout-danger">
+                    <small class="text-muted">Client Success</small><br>
+                    <strong class="h4">4</strong>
+                  </div>
+                </div><!--/.col-->
+                <div class="col-sm-2">
+                  <div class="c-callout c-callout-warning">
+                    <small class="text-muted">Discovery</small><br>
+                    <strong class="h4">7</strong>
+                  </div>
+                </div><!--/.col-->
+                <div class="col-sm-2">
+                  <div class="c-callout c-callout-success">
+                    <small class="text-muted">Tag Inspector</small><br>
+                    <strong class="h4">5</strong>
+                  </div>
+                </div><!--/.col-->
+                <div class="col-sm-2">
+                  <div class="c-callout">
+                    <small class="text-muted">Digital Analitcs</small><br>
+                    <strong class="h4">32</strong>
+                  </div>
+                </div><!--/.col-->
+                <div class="col-sm-2">
+                  <div class="c-callout c-callout-primary">
+                    <small class="text-muted">Data Governanace</small><br>
+                    <strong class="h4">8</strong>
+                  </div>
+                </div><!--/.col-->
+              </div><!--/.row-->
+        </div>
+
+        <div id="employee-cards" class="row">
+            <div class="col">
+                <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                    <img src="./images/InfoTruster.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tweety Bird</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                    <img src="./images/daffy-duck.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Daffy Duck</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                    <img src="./images/InfoTruster.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Rick Sanchez</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+                    <img src="./images/InfoTruster.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Larry the Cucumber</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
